--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobiri.se/c">free site builder</a></section><section class="header10 cid-qYRNIzTPFe mbr-fullscreen mbr-parallax-background" id="header10-c">
+<section class="engine"><a href="https://mobiri.se/r">bootstrap template</a></section><section class="header10 cid-qYRNIzTPFe mbr-fullscreen mbr-parallax-background" id="header10-c">
 
     
 
@@ -445,11 +445,11 @@
                 <div class="plan-body">
                     <div class="plan-list align-center">
                         <ul class="list-group list-group-flush mbr-fonts-style display-7">
-                            <li class="list-group-item">Planos apartir de R$ 385,00 para empresas que necessitam de qualidade na transferecia de dados.</li>
+                            <li class="list-group-item">Planos apartir de R$ 385,00 para empresas que necessitam de qualidade e segurança na transferecia de dados.</li>
                             <li class="list-group-item"><span style="background-color: transparent; color: rgb(135, 154, 159); font-size: 1rem;">Internet ilimitada.
 </span></li><li class="list-group-item"><span style="background-color: transparent; color: rgb(135, 154, 159); font-size: 1rem;">Garantia de Banda de 98%.
 </span></li><li class="list-group-item"><span style="background-color: transparent; color: rgb(135, 154, 159); font-size: 1rem;">IP valido.
-</span></li><li class="list-group-item"><span style="background-color: transparent; color: rgb(135, 154, 159); font-size: 1rem;">IP validoSuporte 24/7</span><br></li>
+</span></li><li class="list-group-item"><span style="background-color: transparent; color: rgb(135, 154, 159); font-size: 1rem;">Suporte 24/7</span><br></li>
                         </ul>
                     </div>
                     
