--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
   
   
 </head>
+
 <body>
 
 <!-- Google Analytics -->
@@ -82,7 +83,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobiri.se/r">bootstrap template</a></section><section class="header10 cid-qYRNIzTPFe mbr-fullscreen mbr-parallax-background" id="header10-c">
+<section class="engine"><a href="https://mobiri.se/a">online website builder</a></section><section class="header10 cid-qYRNIzTPFe mbr-fullscreen mbr-parallax-background" id="header10-c">
 
     
 
@@ -543,6 +544,11 @@
   <script src="assets/smoothscroll/smooth-scroll.js"></script>
   <script src="assets/theme/js/script.js"></script>
   
-  
+<!-- BEGIN JIVOSITE CODE {literal} -->
+<script type='text/javascript'>
+(function(){ var widget_id = 'eIsEc6jqBm';var d=document;var w=window;function l(){
+var s = document.createElement('script'); s.type = 'text/javascript'; s.async = true; s.src = '//code.jivosite.com/script/widget/'+widget_id; var ss = document.getElementsByTagName('script')[0]; ss.parentNode.insertBefore(s, ss);}if(d.readyState=='complete'){l();}else{if(w.attachEvent){w.attachEvent('onload',l);}else{w.addEventListener('load',l,false);}}})();
+</script>
+<!-- {/literal} END JIVOSITE CODE -->
 </body>
 </html>
