--- a/contato.html
+++ b/contato.html
@@ -97,19 +97,15 @@ Ligue Agora</a></div>
         <div class=container>
             <div class="row justify-content-center">
                 <div class="media-container-column col-lg-8" data-form-type=formoid>
-                    <div data-form-alert hidden>
-                        Thanks for filling out the form!
-                    </div>
+                    <div data-form-alert hidden>Obrigado por escolher  M2!</div>
                     </script>
                     <form class=mbr-form action=https://mobirise.com/ method=post data-form-title="Contato M2">
-                        <input type=hidden name=email data-form-email=true value=L5AnMonAOle5QFxl1vB9X/W7c4okawwPfebRRKMidzgtPr8pwOdZH5Q0n0zByOOOSLB9T5N6R7MjQoXou7K5f2AnNSqmxMlS7TeXmZYFvUsM/Ri2OozIV3yqEMA4O5Dw>
-                        <div class=hn-signature-user-infos data-ga=1 data-ga-text="dados pessoais">
-                            <div class=hn-signature-personal-infos>
+                                           <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="jyUYwrVYybGrrhpUc7A8nXcE4DOPxT07Yql77vLuJ4QOq4f5a7NfdAAhnf1F7Ib/D3zye318Dwig6+xkb4qikyXP3Puv8sBb2bz7wSI0iS3d6Gxa6TnXjLzgFDdH+m19">
                                 <div class=row>
                                     <div class=col-sm-12>
                                         <h2 class>
-Dados pessoais
-</h2> </div>
+										Dados pessoais
+										</h2> </div>
                                     <div class=col-sm-12>
                                         <div class="input-label form-group">
                                             <label for=name class=input-label__text>
@@ -151,13 +147,13 @@ Dados pessoais
                                         </div>
                                     </div>
                                 </div>
-                            </div>
-                            <div class=hn-signature-address>
+
+
                                 <div class=row>
                                     <div class=col-sm-12>
                                         <h2 class>
-Endereço de Instalação
-</h2> </div>
+										Endereço de Instalação
+										</h2> </div>
                                     <div class=col-sm-12>
                                         <div class="input-label form-group input-label__disabled form-success">
                                             <label for=postal_code class=input-label__text>
@@ -207,13 +203,13 @@ Endereço de Instalação
                                         </div>
                                     </div>
                                 </div>
-                            </div>
+
                             <div class=row>
                                 <div class="hn-signature__loading [ col-sm-12 ]">
                                     <span class=icon-loading></span>
                                 </div>
                             </div>
-                        </div>
+
                         br/
                         <span class=input-group-btn><button href type=submit class="btn btn-primary btn-form display-4">Enviar</button></span>
                 </div>
@@ -232,13 +228,13 @@ Endereço de Instalação
                 </div>
                 <div class="col-12 col-md-3 mbr-fonts-style display-7">
                     <h5 class=pb-3>
-Endereço:</h5>
+					Endereço:</h5>
                     <p class=mbr-text>Rua Cel. Pilad Rebua, 1321
                         <br>Centro - Bonito MS</p>
                 </div>
                 <div class="col-12 col-md-3 mbr-fonts-style display-7">
                     <h5 class=pb-3>
-Contato:</h5>
+					Contato:</h5>
                     <p class=mbr-text>
                         Email: contato@m2tel.com.br&nbsp;
                         <br>Fone: 067 3255-3827 &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;
@@ -246,11 +242,10 @@ Contato:</h5>
                 </div>
                 <div class="col-12 col-md-3 mbr-fonts-style display-7">
                     <h5 class=pb-3>
-Links
-</h5>
+					Links
+					</h5>
                     <p class=mbr-text>-&nbsp;<a href=http://www.copeltelecom.com/site/speedtest/ target=_blank>Speed Teste Copel</a>
-                        <br>-&nbsp;<a class=text-primary href=https://fast.com/pt/ target=_blank>Fast.com
-</a>
+                        <br>-&nbsp;<a class=text-primary href=https://fast.com/pt/ target=_blank>Fast.com</a>
                         <br>
                         <br>
                     </p>
