--- a/contato.html
+++ b/contato.html
@@ -7,9 +7,8 @@
     <meta name=generator content="Mobirise v4.9.3, mobirise.com">
     <meta name=viewport content="width=device-width, initial-scale=1, minimum-scale=1">
     <link rel="shortcut icon" href=assets/images/logo-228x128.png type=image/x-icon>
-    <meta name=description content="Pagina de Aviso de Atraso.">
+    <meta name=description content=Contato>
     <title>Contato</title>
-    <link rel=stylesheet href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700" media=all />
     <link rel=stylesheet href=assets/web/assets/mobirise-icons/mobirise-icons.css>
     <link rel=stylesheet href=assets/tether/tether.min.css>
     <link rel=stylesheet href=assets/soundcloud-plugin/style.css>
@@ -19,13 +18,11 @@
     <link rel=stylesheet href=assets/dropdown/css/style.css>
     <link rel=stylesheet href=assets/socicon/css/styles.css>
     <link rel=stylesheet href=assets/theme/css/style.css>
-    <link rel=stylesheet href=assets/theme/css/style.css>
     <link rel=stylesheet href=assets/mobirise/css/mbr-additional.css type=text/css>
 </head>
 
 <body>
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-41553656-3"></script>
-    <script async src></script>
     <script>
         window.dataLayer = window.dataLayer || [];
 
@@ -79,7 +76,7 @@ Ligue Agora</a></div>
             </div>
         </nav>
     </section>
-    <section class=engine><a href=https://mobirise.info/g>build a website for free</a></section>
+    <section class=engine><a href=https://mobirise.info/d>website maker</a></section>
     <section class="mbr-section form1 cid-riauqNhSjB" id=form1-12>
         <div class=container>
             <div class="row justify-content-center">
@@ -97,13 +94,103 @@ Ligue Agora</a></div>
         <div class=container>
             <div class="row justify-content-center">
                 <div class="media-container-column col-lg-8" data-form-type=formoid>
-                    <div data-form-alert hidden>Obrigado por escolher M2!</div>
-                    </script>
-                    <form class=mbr-form action=https://mobirise.com/ method=post data-form-title="Contato M2">
-                        <form class=mbr-form action=https://mobirise.com/ method=post data-form-title="Mobirise Form">
-                            <input type=hidden name=email data-form-email=true value=jyUYwrVYybGrrhpUc7A8nXcE4DOPxT07Yql77vLuJ4QOq4f5a7NfdAAhnf1F7Ib/D3zye318Dwig6+xkb4qikyXP3Puv8sBb2bz7wSI0iS3d6Gxa6TnXjLzgFDdH+m19>
-                            <span></span>
-                            <span class=input-group-btn><button href type=submit class="btn btn-primary btn-form display-4">Enviar</button></span>
+                    <div data-form-alert hidden>Obrigado por escolher a M2</div>
+                    <form class=mbr-form action=https://mobirise.com/ method=post data-form-title="Formulrio de Cadastro">
+                        <input type=hidden name=email data-form-email=true value=jyUYwrVYybGrrhpUc7A8nXcE4DOPxT07Yql77vLuJ4QOq4f5a7NfdAAhnf1F7Ib/D3zye318Dwig6+xkb4qikyXP3Puv8sBb2bz7wSI0iS3d6Gxa6TnXjLzgFDdH+m19>
+                        <div class=row>
+                            <div class=col-sm-12>
+                                <h2 class>
+Dados pessoais
+</h2> </div>
+                            <div class=col-sm-12>
+                                <div class="input-label form-group">
+                                    <label for=name class=input-label__text>
+                                        Nome completo *
+                                    </label>
+                                    <input class="input-label__input form-control [ js-required ]" data-form-field=Name id=name name=name placeholder="Digite aqui seu nome" type=text value>
+                                </div>
+                            </div>
+                            <div class=col-sm-7>
+                                <div class="input-label form-group">
+                                    <label for=birthday class=input-label__text>
+                                        Data de Nascimento *
+                                    </label>
+                                    <input class="input-label__input form-control [ js-dateMask js-required js-dateAdult ]" data-form-field=Nascimento id=birthday data-mask=00/00/0000 name=birthday placeholder=dd/mm/aaaa type=tel value maxlength=10>
+                                </div>
+                            </div>
+                            <div class=col-sm-5>
+                                <div class="input-label form-group">
+                                    <label for=cpf class=input-label__text>
+                                        CPF *
+                                    </label>
+                                    <input class="input-label__input form-control [ js-cpfMask js-validateCpf js-required ]" data-form-field=CPF data-mask=000.000.000-00 id=cpf name=cpf placeholder=000.000.000-00 type=tel value maxlength=14>
+                                </div>
+                            </div>
+                            <div class=col-sm-4>
+                                <div class="input-label form-group hasError">
+                                    <label for=mobile_phone class=input-label__text>
+                                        Celular *
+                                    </label>
+                                    <input class="input-label__input form-control [ js-phoneMask js-required ]" data-form-field=Telefone data-mask="(00) 00000-0000" id=mobile_phone name=mobile_phone placeholder="(00) 00000-0000" type=tel value maxlength=13>
+                                </div>
+                            </div>
+                            <div class=col-sm-8>
+                                <div class="input-label form-group hasError">
+                                    <label for=email class=input-label__text>
+                                        E-mail *
+                                    </label>
+                                    <input class="input-label__input form-control [ js-required ]" data-form-field=Emil id=email name=email placeholder="Digite aqui seu e-mail" type=text value>
+                                </div>
+                            </div>
+                        </div>
+                        <div class=row>
+                            <div class=col-sm-12>
+                                <h2 class>
+Endereço de Instalação
+</h2> </div>
+                            <div class=col-sm-12>
+                                <div class="input-label form-group input-label__disabled form-success">
+                                    <label for=postal_code class=input-label__text>
+                                        CEP *
+                                    </label>
+                                    <input disabled class="input-label__input form-control [ js-cepMask js-required ]" data-form-field=CEP id=postal_code name=postal_code placeholder=00000-000 type=tel value=79290-000 maxlength=9>
+                                </div>
+                            </div>
+                            <div class=col-sm-8>
+                                <div class="input-label form-group input-label__disabled form-success">
+                                    <label for=address class=input-label__text>
+                                        Endereço *
+                                    </label>
+                                    <input class="input-label__input form-control [ js-required ]" data-form-field=Endereço id=address name=address placeholder="Digite aqui o seu endereço" type=text value>
+                                </div>
+                            </div>
+                            <div class=col-sm-4>
+                                <div class="input-label form-group">
+                                    <label for=number class=input-label__text>
+                                        Número *
+                                    </label>
+                                    <input class="input-label__input form-control [ js-required ]" data-form-field=Numero id=number name=number type=text value>
+                                </div>
+                            </div>
+                            <div class=col-sm-7>
+                                <div class="input-label form-group input-label__disabled form-success">
+                                    <label for=district class=input-label__text>
+                                        Bairro
+                                    </label>
+                                    <input class="input-label__input form-control" data-form-field=Bairro id=district name=district placeholder="Digite aqui o bairro" type=text value>
+                                </div>
+                            </div>
+                            <div class=col-sm-5>
+                                <div class="input-label form-group input-label__disabled form-success">
+                                    <label for=city class=input-label__text>
+                                        Cidade *
+                                    </label>
+                                    <input class="input-label__input form-control [ js-required ]" data-form-field=Cidade id=city name=city placeholder="Digite aqui a cidade" type=text value>
+                                </div>
+                            </div>
+                        </div>
+                        <span class=input-group-btn><button href type=submit class="btn btn-primary btn-form display-4">Enviar</button></span>
+                    </form>
                 </div>
             </div>
         </div>
@@ -137,7 +224,8 @@ Contato:</h5>
 Links
 </h5>
                     <p class=mbr-text>-&nbsp;<a href=http://www.copeltelecom.com/site/speedtest/ target=_blank>Speed Teste Copel</a>
-                        <br>-&nbsp;<a class=text-primary href=https://fast.com/pt/ target=_blank>Fast.com</a>
+                        <br>-&nbsp;<a class=text-primary href=https://fast.com/pt/ target=_blank>Fast.com
+</a>
                         <br>
                         <br>
                     </p>
