--- a/contato.html
+++ b/contato.html
@@ -66,7 +66,7 @@ Missão</a></li>
 Serviços</a></li>
                     <li class=nav-item><a class="nav-link link text-white display-4" href=index.html#content5-t>
 Planos</a></li>
-                    <li class=nav-item><a class="nav-link link text-white display-4" href=http://m2tel.com.br/> Contato
+                    <li class=nav-item><a class="nav-link link text-white display-4" href=contato.html> Contato
                         <br>
                         </a>
                     </li>
@@ -85,7 +85,7 @@ Ligue Agora</a></div>
                     <h3 class="mbr-section-subtitle align-center mbr-light pb-3 mbr-fonts-style display-5">Solicite informações ou peça seu orçamento.
 <div>Você pode entrar em contato pelos seguintes canais de atendimento:
 </div><div><strong>Skype</strong>: m2.telecomunicação
-</div><div><strong>Whatsapp</strong>: 67 3288-3827 / 99690-5015 / 99880-6401
+</div><div><strong>Whatsapp</strong>: 67 3288-3827 / 99690-5015
 </div><div><strong>Email</strong>: contato@m2tel.com.br
 </div><div>Ou pelo formulario de atendimento abaixo.</div></h3>
                 </div>
@@ -200,8 +200,8 @@ Endereço de Instalação
             <div class="media-container-row content text-white">
                 <div class="col-12 col-md-3">
                     <div class=media-wrap>
-                        <a href=https://mobirise.com/>
-                        <img src=assets/images/logo-228x128.png alt=Mobirise title>
+                        <a href=https://www.m2tel.com.br/>
+                        <img src=assets/images/logo-228x128.png alt=https://www.m2tel.com.br>
                         </a>
                     </div>
                 </div>
