--- a/page5.html
+++ b/page5.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset=UTF-8>
     <meta http-equiv=X-UA-Compatible content="IE=edge">
+    <meta name=generator content="Mobirise v4.9.3, mobirise.com">
     <meta name=viewport content="width=device-width, initial-scale=1, minimum-scale=1">
     <link rel="shortcut icon" href=assets/images/logo-228x128.png type=image/x-icon>
     <meta name=description content=Contato>
@@ -59,18 +60,23 @@ Telecomunicações</a></span>
                             <span class="mbri-home mbr-iconfont mbr-iconfont-btn"></span> Inicio
                         </a>
                     </li>
-                    <li class=nav-item><a class="nav-link link text-white display-4" href=index.html#content5-d>Missão</a></li>
-                    <li class=nav-item><a class="nav-link link text-white display-4" href=index.html#content5-g>Serviços</a></li>
-                    <li class=nav-item><a class="nav-link link text-white display-4" href=index.html#content5-t>Planos</a></li>
-                    <li class=nav-item><a class="nav-link link text-white display-4" href=http://m2tel.com.br/>Contato<br>
+                    <li class=nav-item><a class="nav-link link text-white display-4" href=index.html#content5-d>
+Missão</a></li>
+                    <li class=nav-item><a class="nav-link link text-white display-4" href=index.html#content5-g>
+Serviços</a></li>
+                    <li class=nav-item><a class="nav-link link text-white display-4" href=index.html#content5-t>
+Planos</a></li>
+                    <li class=nav-item><a class="nav-link link text-white display-4" href=contato.html> Contato
+                        <br>
                         </a>
                     </li>
                 </ul>
-                <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-primary display-4" href=tel:0673255-3827><span class="mbri-touch mbr-iconfont mbr-iconfont-btn"></span>Ligue Agora</a></div>
+                <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-primary display-4" href=tel:0673255-3827><span class="mbri-touch mbr-iconfont mbr-iconfont-btn"></span>
+Ligue Agora</a></div>
             </div>
         </nav>
     </section>
-    <section class=engine></section>
+    <section class=engine><a href=https://mobirise.info/d>website maker</a></section>
     <section class="mbr-section form1 cid-riauqNhSjB" id=form1-12>
         <div class=container>
             <div class="row justify-content-center">
@@ -89,20 +95,19 @@ Telecomunicações</a></span>
             <div class="row justify-content-center">
                 <div class="media-container-column col-lg-8" data-form-type=formoid>
                     <div data-form-alert hidden>Obrigado por escolher a M2</div>
-                    <form class=mbr-form action=https://mobirise.com/ method=post data-form-title="Fibra 240">
+                    <form class=mbr-form action=https://mobirise.com/ method=post data-form-title="Formulrio de Cadastro">
                         <input type=hidden name=email data-form-email=true value=jyUYwrVYybGrrhpUc7A8nXcE4DOPxT07Yql77vLuJ4QOq4f5a7NfdAAhnf1F7Ib/D3zye318Dwig6+xkb4qikyXP3Puv8sBb2bz7wSI0iS3d6Gxa6TnXjLzgFDdH+m19>
                         <div class=row>
                             <div class=col-sm-12>
                                 <h2 class>
-								Dados Pessoais
-								</h2>
-							</div>
+Dados pessoais
+</h2> </div>
                             <div class=col-sm-12>
                                 <div class="input-label form-group">
                                     <label for=name class=input-label__text>
-                                        Nome Completo *
+                                        Nome completo *
                                     </label>
-                                    <input class="input-label__input form-control [ js-required ]" data-form-field=Name id=name name=name placeholder="Digite aqui seu nome" required type=text value>
+                                    <input class="input-label__input form-control [ js-required ]" data-form-field=Name id=name name=name placeholder="Digite aqui seu nome" type=text value>
                                 </div>
                             </div>
                             <div class=col-sm-7>
@@ -110,7 +115,7 @@ Telecomunicações</a></span>
                                     <label for=birthday class=input-label__text>
                                         Data de Nascimento *
                                     </label>
-                                    <input class="input-label__input form-control" data-form-field=Nascimento id=birthday data-mask=00/00/0000 name=birthday placeholder=dd/mm/aaaa required type=tel value maxlength=10>
+                                    <input class="input-label__input form-control [ js-dateMask js-required js-dateAdult ]" data-form-field=Nascimento id=birthday data-mask=00/00/0000 name=birthday placeholder=dd/mm/aaaa type=tel value maxlength=10>
                                 </div>
                             </div>
                             <div class=col-sm-5>
@@ -118,7 +123,7 @@ Telecomunicações</a></span>
                                     <label for=cpf class=input-label__text>
                                         CPF *
                                     </label>
-                                    <input class="input-label__input form-control" data-form-field=CPF data-mask=000.000.000-00 id=cpf name=cpf placeholder=000.000.000-00 required type=tel value maxlength=14>
+                                    <input class="input-label__input form-control [ js-cpfMask js-validateCpf js-required ]" data-form-field=CPF data-mask=000.000.000-00 id=cpf name=cpf placeholder=000.000.000-00 type=tel value maxlength=14>
                                 </div>
                             </div>
                             <div class=col-sm-4>
@@ -126,7 +131,7 @@ Telecomunicações</a></span>
                                     <label for=mobile_phone class=input-label__text>
                                         Celular *
                                     </label>
-                                    <input class="input-label__input form-control" data-form-field=Telefone data-mask="(00) 00000-0000" id=mobile_phone name=mobile_phone placeholder="(00) 00000-0000" required type=tel value min=13 maxlength=13>
+                                    <input class="input-label__input form-control [ js-phoneMask js-required ]" data-form-field=Telefone data-mask="(00) 00000-0000" id=mobile_phone name=mobile_phone placeholder="(00) 00000-0000" type=tel value maxlength=13>
                                 </div>
                             </div>
                             <div class=col-sm-8>
@@ -134,22 +139,21 @@ Telecomunicações</a></span>
                                     <label for=email class=input-label__text>
                                         E-mail *
                                     </label>
-                                    <input class="input-label__input form-control" data-form-field=Emil id=email name=email placeholder="Digite aqui seu e-mail" required type=text value>
+                                    <input class="input-label__input form-control [ js-required ]" data-form-field=Emil id=email name=email placeholder="Digite aqui seu e-mail" type=text value>
                                 </div>
                             </div>
                         </div>
                         <div class=row>
                             <div class=col-sm-12>
                                 <h2 class>
-								Endereço de Instalação
-								</h2> 
-							</div>
+Endereço de Instalação
+</h2> </div>
                             <div class=col-sm-12>
                                 <div class="input-label form-group input-label__disabled form-success">
                                     <label for=postal_code class=input-label__text>
                                         CEP *
                                     </label>
-                                    <input disabled class="input-label__input form-control" data-form-field=CEP id=postal_code name=postal_code placeholder=00000-000 type=tel value=79290-000 maxlength=9>
+                                    <input disabled class="input-label__input form-control [ js-cepMask js-required ]" data-form-field=CEP id=postal_code name=postal_code placeholder=00000-000 type=tel value=79290-000 maxlength=9>
                                 </div>
                             </div>
                             <div class=col-sm-8>
@@ -157,7 +161,7 @@ Telecomunicações</a></span>
                                     <label for=address class=input-label__text>
                                         Endereço *
                                     </label>
-                                    <input class="input-label__input form-control" data-form-field=Endereço id=address name=address placeholder="Digite aqui o seu endereço" required type=text value>
+                                    <input class="input-label__input form-control [ js-required ]" data-form-field=Endereço id=address name=address placeholder="Digite aqui o seu endereço" type=text value>
                                 </div>
                             </div>
                             <div class=col-sm-4>
@@ -165,7 +169,7 @@ Telecomunicações</a></span>
                                     <label for=number class=input-label__text>
                                         Número *
                                     </label>
-                                    <input class="input-label__input form-control" data-form-field=Numero id=number name=number required type=text value>
+                                    <input class="input-label__input form-control [ js-required ]" data-form-field=Numero id=number name=number type=text value>
                                 </div>
                             </div>
                             <div class=col-sm-7>
@@ -173,7 +177,7 @@ Telecomunicações</a></span>
                                     <label for=district class=input-label__text>
                                         Bairro
                                     </label>
-                                    <input class="input-label__input form-control" data-form-field=Bairro id=district name=district placeholder="Digite aqui o bairro" required type=text value>
+                                    <input class="input-label__input form-control" data-form-field=Bairro id=district name=district placeholder="Digite aqui o bairro" type=text value>
                                 </div>
                             </div>
                             <div class=col-sm-5>
@@ -181,7 +185,7 @@ Telecomunicações</a></span>
                                     <label for=city class=input-label__text>
                                         Cidade *
                                     </label>
-                                    <input disabled class="input-label__input form-control" data-form-field=Cidade id=city name=city placeholder="Digite aqui a cidade" type=text value=Bonito maxlength=6>
+                                    <input class="input-label__input form-control [ js-required ]" data-form-field=Cidade id=city name=city placeholder="Digite aqui a cidade" type=text value>
                                 </div>
                             </div>
                         </div>
@@ -196,22 +200,20 @@ Telecomunicações</a></span>
             <div class="media-container-row content text-white">
                 <div class="col-12 col-md-3">
                     <div class=media-wrap>
-                        <a href=https://www.m2tel.com.br>
-                        <img src=assets/images/logo-228x128.png alt=M2-Telecom title>
+                        <a href=https://www.m2tel.com.br/>
+                        <img src=assets/images/logo-228x128.png alt=https://www.m2tel.com.br>
                         </a>
                     </div>
                 </div>
                 <div class="col-12 col-md-3 mbr-fonts-style display-7">
                     <h5 class=pb-3>
-					Endereço:
-					</h5>
-                    <p class=mbr-text>Rua Nossa Senhora da Penha 900
+Endereço:</h5>
+                    <p class=mbr-text>Rua Cel. Pilad Rebua, 1321
                         <br>Centro - Bonito MS</p>
                 </div>
                 <div class="col-12 col-md-3 mbr-fonts-style display-7">
                     <h5 class=pb-3>
-					Contato:
-					</h5>
+Contato:</h5>
                     <p class=mbr-text>
                         Email: contato@m2tel.com.br&nbsp;
                         <br>Fone: 067 3255-3827 &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;
@@ -219,10 +221,11 @@ Telecomunicações</a></span>
                 </div>
                 <div class="col-12 col-md-3 mbr-fonts-style display-7">
                     <h5 class=pb-3>
-					Links
-					</h5>
+Links
+</h5>
                     <p class=mbr-text>-&nbsp;<a href=http://www.copeltelecom.com/site/speedtest/ target=_blank>Speed Teste Copel</a>
-                        <br>-&nbsp;<a class=text-primary href=https://fast.com/pt/ target=_blank>Fast.com</a>
+                        <br>-&nbsp;<a class=text-primary href=https://fast.com/pt/ target=_blank>Fast.com
+</a>
                         <br>
                         <br>
                     </p>
