--- a/planoEmpreso.html
+++ b/planoEmpreso.html
@@ -226,11 +226,13 @@
                     </a>
                 </div>
             </div>
-            <div class="col-12 col-md-3 mbr-fonts-style display-7">
-                <h5 class="pb-3">
-                    Endereço:</h5>
-                <p class="mbr-text">Rua Cel. Pilad Rebua, 1321<br>Centro - Bonito MS</p>
-            </div>
+                <div class="col-12 col-md-3 mbr-fonts-style display-7">
+                    <h5 class=pb-3>
+						Endereço:
+					</h5>
+                    <p class=mbr-text>Rua Cel. Pilad Rebua, 1321
+                        <br>Centro - Bonito MS</p>
+                </div>
             <div class="col-12 col-md-3 mbr-fonts-style display-7">
                 <h5 class="pb-3">
                     Contato:</h5>
