--- a/index.html
+++ b/index.html
@@ -497,7 +497,7 @@
 </span></li><li class="list-group-item"><span style="background-color: transparent; color: rgb(135, 154, 159); font-size: 1rem;">Suporte 24/7<br><br></span></li>
                         </ul>
                     </div>
-                    <div class="mbr-section-btn text-center py-4 pb-5"><a href="planoempres.html" class="btn btn-primary display-4">Contratar agora!</a></div>
+                    <div class="mbr-section-btn text-center py-4 pb-5"><a href="planoEmpresas.html" class="btn btn-primary display-4">Contratar agora!</a></div>
                 </div>
             </div>
 
